--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/bysolitdio.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>bySolitdio - Hub</title>
+    <style>
+      #root{
+   background: rgb(1,5,6);
+background: linear-gradient(120deg, rgba(1,5,6,1) 0%, rgba(77,77,77,1) 56%, rgba(227,95,33,1) 100%);
+min-height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
