--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/bysolitdio.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>bySolitdio - Hub</title>
     <style>
@@ -10,6 +10,7 @@
    background: rgb(1,5,6);
 background: linear-gradient(120deg, rgba(1,5,6,1) 0%, rgba(77,77,77,1) 56%, rgba(227,95,33,1) 100%);
 min-height: 100vh;
+padding: 0 2rem;
       }
     </style>
   </head>
